--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 Flask==0.12.2
 Flask-SQLAlchemy==2.3.2
+flask_jwt_extended
 future==0.16.0
 Jinja2==2.10
 numpy==1.14.2
 pandas==0.22.0
 psycopg2
-PyJWT==1.6.1
 python-dateutil==2.6.1
 requests==2.18.4
 SQLAlchemy==1.2.6
